RESOLVED FIXED254396
[RemoteInspector][Socket] non-blocking RunLoop::iterate is required
https://bugs.webkit.org/show_bug.cgi?id=254396
Summary [RemoteInspector][Socket] non-blocking RunLoop::iterate is required
haruhisa.shin
Reported 2023-03-23 22:20:48 PDT
RemoteInspector's thread for receiving socket data was processing messages via non-blocking RunLoop::iterate(). Since the commit https://github.com/WebKit/WebKit/commit/58887089c1f99919a7879162547ec7cf53548bbe replaced iterate() with cycle(), it is no longer possible to receive sockets. We need a function that spins RunLoop without blocking the thread, so I propose that the RunLoop::iterate() be reinstated.
Attachments
haruhisa.shin
Comment 1 2023-03-23 22:28:52 PDT
EWS
Comment 2 2023-03-27 18:10:11 PDT
Committed 262188@main (677a38a7599f): <https://commits.webkit.org/262188@main> Reviewed commits have been landed. Closing PR #11909 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-03-27 18:11:16 PDT
Fujii Hironori
Comment 4 2023-04-26 21:58:55 PDT
Regressed: Bug 256028 – REGRESSION(262188@main) [Win] TestWTF.WTF_RunLoop.DispatchInRunLoopIterationDispatchesOnNextIteration1 is failing
Note You need to log in before you can comment on or make changes to this bug.