[RemoteInspector][Socket] change RunLoop::cycle() to non-blocking https://bugs.webkit.org/show_bug.cgi?id=254396

Reviewed by Kimmo Kinnunen.

RemoteInspector's thread for receiving socket data was processing messages via non-blocking RunLoop::iterate().
The RunLoop::cycle() that was replaced by iterate() by 254382@main was blocking, so it could no longer receive socket data.

The implementation of RunLoopGeneric and RunLoopGlib are non-blocking.
This patch changes cycle() of RunLoopWin to non-blocking as well.

* Source/WTF/wtf/win/RunLoopWin.cpp:
(WTF::RunLoop::cycle):

Canonical link: https://commits.webkit.org/262188@main